[package]
name = "mini-starcoin-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.41"
serde = {version = "1.0.130", default-features = false}
clap = { version = "3.1.18", features = ["derive"] }

bcs-ext = {git = "https://github.com/strawWoo/starcoin", rev = "b2bc097f288c63d86d34299a0d6259bb56edf9cb", package="bcs-ext"}
starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "d871dfb4216f034ee334a575926c101574d9d6dc", package="diem-crypto"}

starcoin-vm-types = {git = "https://github.com/strawWoo/starcoin", rev = "b2bc097f288c63d86d34299a0d6259bb56edf9cb", package="starcoin-vm-types"}
starcoin-executor = {git = "https://github.com/strawWoo/starcoin", rev = "b2bc097f288c63d86d34299a0d6259bb56edf9cb", package="starcoin-executor"}
starcoin-state-api = {git = "https://github.com/strawWoo/starcoin", rev = "b2bc097f288c63d86d34299a0d6259bb56edf9cb", package="starcoin-state-api"}
starcoin-state-store-api = {git = "https://github.com/strawWoo/starcoin", rev = "b2bc097f288c63d86d34299a0d6259bb56edf9cb", package="starcoin-state-store-api"}
starcoin-statedb = {git = "https://github.com/strawWoo/starcoin", rev = "b2bc097f288c63d86d34299a0d6259bb56edf9cb", package="starcoin-statedb"}
starcoin-state-tree = {git = "https://github.com/strawWoo/starcoin", rev = "b2bc097f288c63d86d34299a0d6259bb56edf9cb", package="starcoin-state-tree"}
starcoin-types = {git = "https://github.com/strawWoo/starcoin", rev = "b2bc097f288c63d86d34299a0d6259bb56edf9cb", package="starcoin-types"}
starcoin-rpc-client = {git = "https://github.com/strawWoo/starcoin", rev = "b2bc097f288c63d86d34299a0d6259bb56edf9cb", package="starcoin-rpc-client", optional = true}

[features]
default = ["from_remote"]
from_remote = ["starcoin-rpc-client"]
from_file = []

