[package]
name = "mini-starcoin-vm"
version = "0.1.0"
edition = "2021"

[profile.release]
strip=true
lto=true
panic = "abort"

[dependencies]
anyhow = "1.0.41"
serde = {version = "1.0.130", default-features = false}
clap = { version = "3.1.18", features = ["derive"] }

bcs-ext = {git = "https://github.com/starcoinorg/starcoin", rev = "cb0549fe948421788b4aebaf43b3d8ac8e2857f1", package="bcs-ext"}
starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "d871dfb4216f034ee334a575926c101574d9d6dc", package="diem-crypto"}

starcoin-vm-types = {git = "https://github.com/starcoinorg/starcoin", rev = "cb0549fe948421788b4aebaf43b3d8ac8e2857f1", package="starcoin-vm-types"}
starcoin-state-api = {git = "https://github.com/starcoinorg/starcoin", rev = "cb0549fe948421788b4aebaf43b3d8ac8e2857f1", package="starcoin-state-api"}
starcoin-state-store-api = {git = "https://github.com/starcoinorg/starcoin", rev = "cb0549fe948421788b4aebaf43b3d8ac8e2857f1", package="starcoin-state-store-api"}
starcoin-statedb = {git = "https://github.com/starcoinorg/starcoin", rev = "cb0549fe948421788b4aebaf43b3d8ac8e2857f1", package="starcoin-statedb"}
starcoin-state-tree = {git = "https://github.com/starcoinorg/starcoin", rev = "cb0549fe948421788b4aebaf43b3d8ac8e2857f1", package="starcoin-state-tree"}
starcoin-types = {git = "https://github.com/starcoinorg/starcoin", rev = "cb0549fe948421788b4aebaf43b3d8ac8e2857f1", package="starcoin-types"}
starcoin-rpc-client = {git = "https://github.com/starcoinorg/starcoin", rev = "cb0549fe948421788b4aebaf43b3d8ac8e2857f1", package="starcoin-rpc-client", optional = true}
starcoin-vm-runtime = {git = "https://github.com/starcoinorg/starcoin", rev = "cb0549fe948421788b4aebaf43b3d8ac8e2857f1", default-features = false, package="starcoin-vm-runtime"}

[features]
default = ["from_remote"]
from_remote = ["starcoin-rpc-client"]
test = ["starcoin-rpc-client"]

